--- a/html_css/simple_website/styles.css
+++ b/html_css/simple_website/styles.css
@@ -1,24 +1,29 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+  font-family: Arial, sans-serif;
+  background-color: #482626;
+  margin: 0;
+  padding: 0;
 }
-
 header {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
+  background-color: #1d560a;
+  color: rgb(255, 221, 0);
+  text-align: center;
+  padding: 15px 0;
 }
-
-section {
-    max-width: 800px;
-    margin: 20px auto;
-    padding: 20px;
+iframe {
+  display: block;
+  margin: 20px auto;
 }
-
 .box {
-    background-color: #f0f0f0;
-    border: 1px solid #ccc;
-    padding: 10px;
+  background-color: #742d2d;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(91, 216, 13, 0.1);
+  padding: 20px;
+  margin-top: 20px;
+}
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 10px auto;
 }
